Added form link to nav bar
Added form link to nav bar
Added small template design to main index page

--- a/RoyalApartments/RoyalApartments/Views/Home/Index.cshtml
+++ b/RoyalApartments/RoyalApartments/Views/Home/Index.cshtml
@@ -3,5 +3,16 @@
 }
 
 <div class="jumbotron">
-   Design to be added later
+    <div class="container">
+        <h1 class="display-3">Apartments for rent</h1>
+        <p>This website allows you to sign up and rent your own space out </p>
+        <p><a class="btn btn-primary btn-lg" href="http://localhost:50054/apartments" role="button">How? &raquo;</a></p>
+    </div>
 </div>
+
+<div class="container">
+    
+
+</div>
+
+    <hr>
