--- a/RoyalApartments/RoyalApartments/Views/Home/Index.cshtml
+++ b/RoyalApartments/RoyalApartments/Views/Home/Index.cshtml
@@ -7,10 +7,18 @@
 <div class="jumbotron">
     <div class="container">
         <h1 class="display-3">Apartments for rent</h1>
-        <p>This website allows you to sign up and rent your own space out </p>
-        <p><a class="btn btn-primary btn-lg" href="http://localhost:50054/apartments" role="button">How? &raquo;</a></p>
+        <p>Check out the best way to reach your targeted audicance <a href="https://www.inman.com/category/rentals/"></a> </p>
+        <p><a class="btn btn-primary btn-lg" href="http://localhost:50054/apartments" role="button">Sign your house or apartment for rent &raquo;</a></p>
     </div>
 </div>
+
+<div>
+
+
+</div>
+<em> Coming soon... How to add your location via Google maps <br />
+                                                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3211.7674167705295!2d-85.52694228429998!3d36.39062408003495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8867037c023f898b%3A0x1d5ef792a0217e6c!2s174%20Shady%20Ln%2C%20Gainesboro%2C%20TN%2038562!5e0!3m2!1sen!2sus!4v1572921049292!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe></em>
+<!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3211.7674167705295!2d-85.52694228429998!3d36.39062408003495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8867037c023f898b%3A0x1d5ef792a0217e6c!2s174%20Shady%20Ln%2C%20Gainesboro%2C%20TN%2038562!5e0!3m2!1sen!2sus!4v1572921049292!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe> -->
 
 <div class="container">
 
