--- a/RoyalApartments/RoyalApartments/Views/Home/Contact.cshtml
+++ b/RoyalApartments/RoyalApartments/Views/Home/Contact.cshtml
@@ -5,13 +5,10 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    174 shady ln 
+    Hilham Tn
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:brandon101morgan@outlook.com">My email</a><br />
 </address>
